Closed Bug 1259224 Opened 8 years ago Closed 8 years ago

Silence some warnings in the mac widget code

Categories

(Core :: Widget, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox48 --- fixed

People

(Reporter: jwatt, Assigned: jwatt)

Details

Attachments

(1 file)

      No description provided.
Attached patch patchSplinter Review
Attachment #8734081 - Flags: review?(mstange)
Comment on attachment 8734081 [details] [diff] [review]
patch

Review of attachment 8734081 [details] [diff] [review]:
-----------------------------------------------------------------

Thank you!
Attachment #8734081 - Flags: review?(mstange) → review+
https://hg.mozilla.org/mozilla-central/rev/b057d3cb5c1b
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in before you can comment on or make changes to this bug.