Bug 1259224 - Silence some warnings in the mac widget code. r=mstange